apps/anidown/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: anidown-service
spec:
  selector:
    app: anidown
  ports:
    - protocol: TCP
      port: 8452
      targetPort: 8452
  type: LoadBalancer
